# Robotics

Example_code/: MUJOCO_LOG.TXT
Example_code/Example_code/: Mujoco_example_UR5e.py
Lecture 3/: Mujoco_example_UR5e_trj_gen_example_.py
Lecture 3/Example_code/Example_code/: Mujoco_example_UR5e.py
Lecture 5/: MUJOCO_LOG.TXT  Mujoco_example_UR5e_Poly_.py
RoboticsExercises/: CMakeLists.txt  RobWorkCheatSheet.md
RoboticsExercises/Exercise1/: README.md
RoboticsExercises/Exercise1/Assignment/HelloRobWork/: CMakeLists.txt  HelloWorldRobWork.py  README.md
RoboticsExercises/Exercise1/Assignment/Kuka16WC/: Scene.wc.xml
RoboticsExercises/Exercise1/Assignment/Kuka16WC/Geometry/: PalletSupportFrame.ac  bottle_small.ac  bottle_small.stl  table_ac3d.ac
RoboticsExercises/Exercise1/Assignment/Kuka16WC/KukaKr16/: KukaKr16.wc.xml
RoboticsExercises/Exercise1/Assignment/Kuka16WC/KukaKr16/Geometry/: Base.stl  Joint1.stl  Joint2.stl  Joint3.stl  Joint4.stl  Joint5.stl  Servomotor1.stl  Servomotor2.stl  Servomotor3.stl
RoboticsExercises/Exercise1/Assignment/Kuka16WC/KukaKr16/Geometry/.svn/text-base/: tool.ac.svn-base
RoboticsExercises/Exercise1/Assignment/Kuka16WC/PG70/: PG70.wc.xml
RoboticsExercises/Exercise1/Assignment/UR5WorkCellCut/: Scene.wc.xml
RoboticsExercises/Exercise1/Presentation/: lab1.tex
RoboticsExercises/Exercise1/Solution/UR-6-85-5-A/: Device.wc.xml
RoboticsExercises/Exercise2/: README.md
RoboticsExercises/Exercise2/Assignment/Exercise3-2-GettingStarted/: CMakeLists.txt
RoboticsExercises/Exercise2/Assignment/Exercise3-2-GettingStarted/src/: Exercise3-2.cpp
RoboticsExercises/Exercise2/Presentation/: lab2.tex
RoboticsExercises/Exercise2/Solution/: CMakeLists.txt  ex3_1_solution.py  ex3_2_solution.py
RoboticsExercises/Exercise2/Solution/src/: forwardkinematics.cpp  jacobian.cpp
RoboticsExercises/Exercise3/Assignment/: Programming Exercise 5.odt
RoboticsExercises/Exercise3/Assignment/ReachabilityAnalysis/: CMakeLists.txt  reachabilityAnalysis.cpp  reachabiltyAnalysis.py
RoboticsExercises/Exercise3/Assignment/ReachabilityAnalysis/scene/: Scene.wc.xml
RoboticsExercises/Exercise3/Assignment/ReachabilityAnalysis/scene/UR5/: UR5.wc.xml
RoboticsExercises/Exercise3/Assignment/ReachabilityAnalysis/scene/UR5/meshes/ur5/visual/: Base.dae  Wrist2.dae
RoboticsExercises/Exercise3/Solution/: CMakeLists.txt  reachabilityAnalysis.cpp  reachabilityAnalysis.py
RoboticsExercises/Exercise3/Solution/scene/: Scene.wc.xml  visu.rwplay
RoboticsExercises/Exercise3/Solution/scene/UR5/: DeviceParam.xml
RoboticsExercises/Exercise4/Presentation/: lab4.tex
RoboticsExercises/Exercise4/Solution/: CMakeLists.txt  Main-4.cpp  Main-bonus.cpp
RoboticsExercises/Exercise4/WorkCell/: Scene.wc.xml
RoboticsExercises/Exercise4/WorkCell/UR5/: DeviceParam.xml  ProximitySetup.xml
RoboticsExercises/Exercise4/WorkCell/UR5/meshes/ur5/visual/: Forearm.dae  Shoulder.dae  UpperArm.dae  Wrist1.dae  Wrist3.dae
RoboticsExercises/Exercise5/Assignment/: CMakeLists.txt  main.cpp
RoboticsExercises/Exercise5/Presentation/: lab5.tex
RoboticsExercises/Exercise5/Solution/: CMakeLists.txt  README.md  main.cpp
RoboticsExercises/Exercise6/Assignment/: CMakeLists.txt  README.md  lab6.py  main.cpp
RoboticsExercises/Exercise6/Assignment/Kr16WallWorkCell/: Scene.wc.xml
RoboticsExercises/Exercise6/Assignment/Kr16WallWorkCell/Geometry/: ToolUnit.ac  table.stl
RoboticsExercises/Exercise6/Presentation/: lab6.tex
RoboticsExercises/Exercise6/Solution/: CMakeLists.txt  lab6_sol.py  main.cpp
RoboticsExercises/Exercise6/Solution/Kr16WallWorkCell/: SceneCollisionSetup.xml
RoboticsExercises/Exercise6/Solution/Kr16WallWorkCell/KukaKr16/Geometry/: ScapeToolRed.ac
RoboticsExercises/Exercise7/Assignment/: CMakeLists.txt  ToBePruned.rwplay  main.cpp
RoboticsExercises/Exercise7/Assignment/Kr16WallWorkCell/KukaKr16/: KukaKr16.xml
RoboticsExercises/Exercise7/Assignment/Kr16WallWorkCell/KukaKr16/Geometry/: ScapeToolBlue.ac
RoboticsExercises/Exercise7/Presentation/: lab7.tex
RoboticsExercises/Exercise7/Solution/: CMakeLists.txt  main.cpp
RoboticsExercises/Exercise8/Assignment/: CMakeLists.txt  Tree.hpp  Tree.py  main.cpp  main.py
RoboticsExercises/Exercise8/Assignment/WorkCellObstacle/: Scene.wc.xml
RoboticsExercises/Exercise8/Assignment/WorkCellObstacle/UR5/UR-6-85-5-A/: Device.wc.xml  UR6855A_light.wc.xml
RoboticsExercises/Exercise8/Presentation/: lab8.tex
RoboticsExercises/Exercise8/Solution/: CMakeLists.txt  main.cpp  main.py
RoboticsExercises/Exercise8/Solution/WorkCellObstacle/: Scene.wc.xml
