cmake_minimum_required(VERSION 3.10.0)

project(AllExercises)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)

add_subdirectory(Exercise1/Assignment/HelloRobWork)
add_subdirectory(Exercise2/Solution)
add_subdirectory(Exercise3/Solution)
add_subdirectory(Exercise4/Solution)
add_subdirectory(Exercise5/Solution)
add_subdirectory(Exercise6/Solution)
add_subdirectory(Exercise7/Solution)
add_subdirectory(Exercise8/Solution)